--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_GeneratedPublisherFramework.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_GeneratedPublisherFramework.g.ts.cmp
@@ -213,7 +213,7 @@ function dispatcher(message: Messages.DispatchedMessage): void
                         Meta.publishType("PrintMediaReverse", "number");
                         Meta.publishType("MyEnumAA", "number");
                         Meta.publishType("MyEnumBBB", "number");
-                        Meta.publishType("Name", "{ first: string, last: string, priorNames: Names[] }");
+                        Meta.publishType("Name", "{ first: string, last: string }");
                         Meta.publishType("Names", "Name[]");
                         Meta.publishType("Nested", "{ abc: { a: Uint8Array, b: { c: Names } } }");
                         Meta.publishType("typeWithMissingType", "{ p1: any, p2: number }");
@@ -243,10 +243,18 @@ function dispatcher(message: Messages.DispatchedMessage): void
                         // TODO: Add an exported [non-async] function 'onRecoveryComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
-                    case Messages.AppEventType.UpgradeStateAndCode:
-                        // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                    case Messages.AppEventType.UpgradeState:
+                        // TODO: Add an exported [non-async] function 'onUpgradeState(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_Types.ts in order to reference the 'Messages' namespace.
-                        //       Also, your handler MUST call IC.upgrade() [to upgrade code] and the upgrade() method of your AmbrosiaAppState instance [to upgrade state].
+                        //       Upgrading is performed by calling _appState.upgrade(), for example:
+                        //       _appState = _appState.upgrade<AppStateVNext>(AppStateVNext);
+                        break;
+
+                    case Messages.AppEventType.UpgradeCode:
+                        // TODO: Add an exported [non-async] function 'onUpgradeCode(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_Types.ts in order to reference the 'Messages' namespace.
+                        //       Upgrading is performed by calling IC.upgrade(), passing the new handlers from the "upgraded" PublisherFramework.g.ts,
+                        //       which should be part of your app (alongside your original PublisherFramework.g.ts).
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
@@ -267,6 +275,10 @@ function dispatcher(message: Messages.DispatchedMessage): void
 
                     case Messages.AppEventType.CheckpointSaved:
                         // TODO: Add an exported [non-async] function 'onCheckpointSaved(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.UpgradeComplete:
+                        // TODO: Add an exported [non-async] function 'onUpgradeComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                 }
                 break;
