--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_GeneratedConsumerInterface.g.ts.cmp
@@ -1,4 +1,4 @@
-// Generated consumer-side API for the 'server' Ambrosia Node instance.
+// Generated consumer-side API for the 'TS_AmbrosiaTag_Generated' Ambrosia Node app/service.
 // Publisher: Darren Gehring [darrenge@microsoft.com].
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
@@ -6,8 +6,50 @@ import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
 import Utils = Ambrosia.Utils;
 
-let DESTINATION_INSTANCE_NAME: string = "server";
-let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
+let _destinationInstanceName: string = null;
+let _postTimeoutInMs: number = 8000; // -1 = Infinite
+
+/** 
+ * Sets the destination instance name that the API targets.\
+ * Must be called at least once (with the name of a registered Ambrosia instance that implements the 'TS_AmbrosiaTag_Generated' API) before any other method in the API is used.
+ *
+ * **Warning:** When using post methods, it is strongly recommended to not change the initially set destination instance because it can cause postResultDispatcher() to not process the result.
+ */
+export function setDestinationInstance(instanceName: string): void
+{
+    _destinationInstanceName = instanceName.trim();
+}
+
+/** Returns the destination instance name that the API currently targets. */
+export function getDestinationInstance(): string
+{
+    return (_destinationInstanceName);
+}
+
+/** Throws if _destinationInstanceName has not been set. */
+function checkDestinationSet(): void
+{
+    if (!_destinationInstanceName)
+    {
+        throw new Error("setDestinationInstance() must be called to define the target destination before the 'TS_AmbrosiaTag_Generated' API can be used.");
+    }
+}
+/**
+ * Sets the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * All post methods will use this timeout value. Specify -1 for no timeout. 
+ */
+export function setPostTimeoutInMs(timeoutInMs: number): void
+{
+    _postTimeoutInMs = Math.max(-1, timeoutInMs);
+}
+/**
+ * Returns the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * A value of -1 means there is no timeout.
+ */
+export function getPostTimeoutInMs(): number
+{
+    return (_postTimeoutInMs);
+}
 
 /**
 Test File to test all the the ways that the ambrosia tag can be set and still work
@@ -17,14 +59,16 @@ export namespace Test
     /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). Returns the post method callID.* */
     export function OneLineNoComment_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "OneLineNoComment", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
     /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
     export function OneLineNoComment_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "OneLineNoComment", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -35,7 +79,8 @@ export namespace Test
      */
     export function MultiLineCommentBeforeTag_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "MultiLineCommentBeforeTag", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
@@ -47,20 +92,23 @@ export namespace Test
      */
     export function MultiLineCommentBeforeTag_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "MultiLineCommentBeforeTag", 1, _postTimeoutInMs, callContextData);
     }
 
     /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). Returns the post method callID.* */
     export function MultiSeparateLinesCommentBeforeTag_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "MultiSeparateLinesCommentBeforeTag", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
     /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
     export function MultiSeparateLinesCommentBeforeTag_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "MultiSeparateLinesCommentBeforeTag", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -70,7 +118,8 @@ export namespace Test
      */
     export function EmptyLineBetweenTagAndFctn_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "EmptyLineBetweenTagAndFctn", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
@@ -81,7 +130,8 @@ export namespace Test
      */
     export function EmptyLineBetweenTagAndFctn_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "EmptyLineBetweenTagAndFctn", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -91,7 +141,8 @@ export namespace Test
      */
     export function SpacingAroundTag_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "SpacingAroundTag", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
@@ -102,7 +153,8 @@ export namespace Test
      */
     export function SpacingAroundTag_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "SpacingAroundTag", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -112,7 +164,8 @@ export namespace Test
      */
     export function JSDOcTag_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "JSDOcTag", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
@@ -123,7 +176,8 @@ export namespace Test
      */
     export function JSDOcTag_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "JSDOcTag", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -133,7 +187,8 @@ export namespace Test
      */
     export function fnOverload_Post(callContextData: any, name?: string): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "fnOverload", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("name?", name));
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "fnOverload", 1, _postTimeoutInMs, callContextData, IC.arg("name?", name));
         return (callID);
     }
 
@@ -144,7 +199,8 @@ export namespace Test
      */
     export function fnOverload_PostByImpulse(callContextData: any, name?: string): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "fnOverload", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("name?", name));
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "fnOverload", 1, _postTimeoutInMs, callContextData, IC.arg("name?", name));
     }
 }
 
@@ -157,9 +213,9 @@ export function postResultDispatcher(senderInstanceName: string, methodName: str
     const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
     let handled: boolean = true;
 
-    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    if (senderInstanceName !== _destinationInstanceName)
     {
-        return (false); // Not handled (this post result is from a different instance than the one this consumer-side file is for)
+        return (false); // Not handled (this post result is from a different instance than the destination instance currently being targeted)
     }
 
     if (errorMsg)
