--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
@@ -1,4 +1,4 @@
-// Generated consumer-side API for the 'server' Ambrosia Node instance.
+// Generated consumer-side API for the 'TS_CustomSerialParamNoRawParam_Generated' Ambrosia Node app/service.
 // Publisher: Darren Gehring [darrenge@microsoft.com].
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
@@ -6,8 +6,50 @@ import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
 import Utils = Ambrosia.Utils;
 
-let DESTINATION_INSTANCE_NAME: string = "server";
-let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
+let _destinationInstanceName: string = null;
+let _postTimeoutInMs: number = 8000; // -1 = Infinite
+
+/** 
+ * Sets the destination instance name that the API targets.\
+ * Must be called at least once (with the name of a registered Ambrosia instance that implements the 'TS_CustomSerialParamNoRawParam_Generated' API) before any other method in the API is used.
+ *
+ * **Warning:** When using post methods, it is strongly recommended to not change the initially set destination instance because it can cause postResultDispatcher() to not process the result.
+ */
+export function setDestinationInstance(instanceName: string): void
+{
+    _destinationInstanceName = instanceName.trim();
+}
+
+/** Returns the destination instance name that the API currently targets. */
+export function getDestinationInstance(): string
+{
+    return (_destinationInstanceName);
+}
+
+/** Throws if _destinationInstanceName has not been set. */
+function checkDestinationSet(): void
+{
+    if (!_destinationInstanceName)
+    {
+        throw new Error("setDestinationInstance() must be called to define the target destination before the 'TS_CustomSerialParamNoRawParam_Generated' API can be used.");
+    }
+}
+/**
+ * Sets the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * All post methods will use this timeout value. Specify -1 for no timeout. 
+ */
+export function setPostTimeoutInMs(timeoutInMs: number): void
+{
+    _postTimeoutInMs = Math.max(-1, timeoutInMs);
+}
+/**
+ * Returns the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * A value of -1 means there is no timeout.
+ */
+export function getPostTimeoutInMs(): number
+{
+    return (_postTimeoutInMs);
+}
 
 /**
 Test when missing @param rawParams
@@ -20,7 +62,8 @@ export namespace Test
      */
     export function takesCustomSerializedParams_Fork(rawParams: Uint8Array): void
     {
-        IC.callFork(DESTINATION_INSTANCE_NAME, 2, rawParams);
+        checkDestinationSet();
+        IC.callFork(_destinationInstanceName, 2, rawParams);
     }
 
     /**
@@ -29,7 +72,8 @@ export namespace Test
      */
     export function takesCustomSerializedParams_Impulse(rawParams: Uint8Array): void
     {
-        IC.callImpulse(DESTINATION_INSTANCE_NAME, 2, rawParams);
+        checkDestinationSet();
+        IC.callImpulse(_destinationInstanceName, 2, rawParams);
     }
 
     /**
@@ -38,7 +82,8 @@ export namespace Test
      */
     export function takesCustomSerializedParams_EnqueueFork(rawParams: Uint8Array): void
     {
-        IC.queueFork(DESTINATION_INSTANCE_NAME, 2, rawParams);
+        checkDestinationSet();
+        IC.queueFork(_destinationInstanceName, 2, rawParams);
     }
 
     /**
@@ -47,6 +92,7 @@ export namespace Test
      */
     export function takesCustomSerializedParams_EnqueueImpulse(rawParams: Uint8Array): void
     {
-        IC.queueImpulse(DESTINATION_INSTANCE_NAME, 2, rawParams);
+        checkDestinationSet();
+        IC.queueImpulse(_destinationInstanceName, 2, rawParams);
     }
 }
