--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_GeneratedConsumerInterface.g.ts.cmp
@@ -1,4 +1,4 @@
-// Generated consumer-side API for the 'server' Ambrosia Node instance.
+// Generated consumer-side API for the 'TS_Types_Generated' Ambrosia Node app/service.
 // Publisher: Darren Gehring [darrenge@microsoft.com].
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
@@ -6,8 +6,50 @@ import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
 import Utils = Ambrosia.Utils;
 
-let DESTINATION_INSTANCE_NAME: string = "server";
-let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
+let _destinationInstanceName: string = null;
+let _postTimeoutInMs: number = 8000; // -1 = Infinite
+
+/** 
+ * Sets the destination instance name that the API targets.\
+ * Must be called at least once (with the name of a registered Ambrosia instance that implements the 'TS_Types_Generated' API) before any other method in the API is used.
+ *
+ * **Warning:** When using post methods, it is strongly recommended to not change the initially set destination instance because it can cause postResultDispatcher() to not process the result.
+ */
+export function setDestinationInstance(instanceName: string): void
+{
+    _destinationInstanceName = instanceName.trim();
+}
+
+/** Returns the destination instance name that the API currently targets. */
+export function getDestinationInstance(): string
+{
+    return (_destinationInstanceName);
+}
+
+/** Throws if _destinationInstanceName has not been set. */
+function checkDestinationSet(): void
+{
+    if (!_destinationInstanceName)
+    {
+        throw new Error("setDestinationInstance() must be called to define the target destination before the 'TS_Types_Generated' API can be used.");
+    }
+}
+/**
+ * Sets the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * All post methods will use this timeout value. Specify -1 for no timeout. 
+ */
+export function setPostTimeoutInMs(timeoutInMs: number): void
+{
+    _postTimeoutInMs = Math.max(-1, timeoutInMs);
+}
+/**
+ * Returns the post method timeout interval (in milliseconds), which is how long to wait for a result from the destination instance before raising an error.\
+ * A value of -1 means there is no timeout.
+ */
+export function getPostTimeoutInMs(): number
+{
+    return (_postTimeoutInMs);
+}
 
 /**
 Test File to test all the Types for typescripts
@@ -76,7 +118,8 @@ export namespace Test
      */
     export function BasicTypes_Post(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "BasicTypes", 1, _postTimeoutInMs, callContextData, 
             IC.arg("isFalse", isFalse), 
             IC.arg("height", height), 
             IC.arg("mystring?", mystring), 
@@ -93,7 +136,8 @@ export namespace Test
      */
     export function BasicTypes_PostByImpulse(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "BasicTypes", 1, _postTimeoutInMs, callContextData, 
             IC.arg("isFalse", isFalse), 
             IC.arg("height", height), 
             IC.arg("mystring?", mystring), 
@@ -109,7 +153,8 @@ export namespace Test
      */
     export function getMedia_Post(callContextData: any, mediaName: string): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "getMedia", 1, _postTimeoutInMs, callContextData, IC.arg("mediaName", mediaName));
         return (callID);
     }
 
@@ -120,7 +165,8 @@ export namespace Test
      */
     export function getMedia_PostByImpulse(callContextData: any, mediaName: string): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "getMedia", 1, _postTimeoutInMs, callContextData, IC.arg("mediaName", mediaName));
     }
 
     /**
@@ -130,7 +176,8 @@ export namespace Test
      */
     export function warnUser_Post(callContextData: any): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "warnUser", 1, _postTimeoutInMs, callContextData);
         return (callID);
     }
 
@@ -141,7 +188,8 @@ export namespace Test
      */
     export function warnUser_PostByImpulse(callContextData: any): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "warnUser", 1, _postTimeoutInMs, callContextData);
     }
 
     /**
@@ -151,7 +199,8 @@ export namespace Test
      */
     export function makeName_Post(callContextData: any, firstName?: string, lastName?: string): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "makeName", 1, _postTimeoutInMs, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
         return (callID);
@@ -164,7 +213,8 @@ export namespace Test
      */
     export function makeName_PostByImpulse(callContextData: any, firstName?: string, lastName?: string): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "makeName", 1, _postTimeoutInMs, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
     }
@@ -176,7 +226,8 @@ export namespace Test
      */
     export function return_number_Post(callContextData: any, strvalue: string): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "return_number", 1, _postTimeoutInMs, callContextData, IC.arg("strvalue", strvalue));
         return (callID);
     }
 
@@ -187,7 +238,8 @@ export namespace Test
      */
     export function return_number_PostByImpulse(callContextData: any, strvalue: string): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "return_number", 1, _postTimeoutInMs, callContextData, IC.arg("strvalue", strvalue));
     }
 
     /**
@@ -197,7 +249,8 @@ export namespace Test
      */
     export function returnstring_Post(callContextData: any, numvalue: number): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "returnstring", 1, _postTimeoutInMs, callContextData, IC.arg("numvalue", numvalue));
         return (callID);
     }
 
@@ -208,7 +261,8 @@ export namespace Test
      */
     export function returnstring_PostByImpulse(callContextData: any, numvalue: number): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "returnstring", 1, _postTimeoutInMs, callContextData, IC.arg("numvalue", numvalue));
     }
 
     /**
@@ -219,7 +273,8 @@ export namespace Test
      */
     export function fnWithMissingType_Post(callContextData: any, p1: any, p2: number): number
     {
-        const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        const callID = IC.postFork(_destinationInstanceName, "fnWithMissingType", 1, _postTimeoutInMs, callContextData, 
             IC.arg("p1", p1), 
             IC.arg("p2", p2));
         return (callID);
@@ -233,7 +288,8 @@ export namespace Test
      */
     export function fnWithMissingType_PostByImpulse(callContextData: any, p1: any, p2: number): void
     {
-        IC.postByImpulse(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, POST_TIMEOUT_IN_MS, callContextData, 
+        checkDestinationSet();
+        IC.postByImpulse(_destinationInstanceName, "fnWithMissingType", 1, _postTimeoutInMs, callContextData, 
             IC.arg("p1", p1), 
             IC.arg("p2", p2));
     }
@@ -248,9 +304,9 @@ export function postResultDispatcher(senderInstanceName: string, methodName: str
     const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
     let handled: boolean = true;
 
-    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    if (senderInstanceName !== _destinationInstanceName)
     {
-        return (false); // Not handled (this post result is from a different instance than the one this consumer-side file is for)
+        return (false); // Not handled (this post result is from a different instance than the destination instance currently being targeted)
     }
 
     if (errorMsg)
