--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_UnionType_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_UnionType_GeneratedConsumerInterface.g.ts.cmp
@@ -1,4 +1,4 @@
-// Generated consumer-side API for the 'TS_GenType2_Generated' Ambrosia Node app/service.
+// Generated consumer-side API for the 'TS_UnionType_Generated' Ambrosia Node app/service.
 // Publisher: (Not specified).
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
@@ -6,13 +6,13 @@ import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
 import Utils = Ambrosia.Utils;
 
-const _knownDestinations: string[] = []; // All previously used destination instances (the 'TS_GenType2_Generated' Ambrosia app/service can be running on multiple instances, potentially simultaneously)
+const _knownDestinations: string[] = []; // All previously used destination instances (the 'TS_UnionType_Generated' Ambrosia app/service can be running on multiple instances, potentially simultaneously)
 let _destinationInstanceName: string = ""; // The current destination instance
 let _postTimeoutInMs: number = 8000; // -1 = Infinite
 
 /** 
  * Sets the destination instance name that the API targets.\
- * Must be called at least once (with the name of a registered Ambrosia instance that implements the 'TS_GenType2_Generated' API) before any other method in the API is used.
+ * Must be called at least once (with the name of a registered Ambrosia instance that implements the 'TS_UnionType_Generated' API) before any other method in the API is used.
  */
 export function setDestinationInstance(instanceName: string): void
 {
@@ -34,7 +34,7 @@ function checkDestinationSet(): void
 {
     if (!_destinationInstanceName)
     {
-        throw new Error("setDestinationInstance() must be called to specify the target destination before the 'TS_GenType2_Generated' API can be used.");
+        throw new Error("setDestinationInstance() must be called to specify the target destination before the 'TS_UnionType_Generated' API can be used.");
     }
 }
 
@@ -56,35 +56,10 @@ export function getPostTimeoutInMs(): number
     return (_postTimeoutInMs);
 }
 
-/**
- * Generic built-in types can be used, but only with concrete types (not type placeholders, eg. "T"): Example #2
- */
-export class EmployeeWithGenerics
+export namespace Test
 {
-    firstNames: Set<{ name: string, nickNames: NickNames }>;
-    lastName: string;
-    birthYear: number;
-
-    constructor(firstNames: Set<{ name: string, nickNames: NickNames }>, lastName: string, birthYear: number)
-    {
-        this.firstNames = firstNames;
-        this.lastName = lastName;
-        this.birthYear = birthYear;
-    }
-}
-
-/**
- * Test for a literal-object array type; this should generate a 'NickNames_Element' class and then redefine the type of NickNames as Nicknames_Element[].
- * This is done to makes it easier for the consumer to create a NickNames instance.
- */
-export type NickNames = NickNames_Element[];
-
-export class NickNames_Element
-{
-    name: string;
-
-    constructor(name: string)
-    {
-        this.name = name;
-    }
+    /**
+     * Union type
+     */
+    export type MyUnionType = string | number;
 }
