--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_UnionType_GeneratedPublisherFramework.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_UnionType_GeneratedPublisherFramework.g.ts.cmp
@@ -1,7 +1,7 @@
-// Generated publisher-side framework for the 'TS_Types_Generated' Ambrosia Node app/service.
+// Generated publisher-side framework for the 'TS_UnionType_Generated' Ambrosia Node app/service.
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
-import * as PTM from "./JS_CodeGen_TestFiles/TS_Types"; // PTM = "Published Types and Methods", but this file can also include app-state and app-event handlers
+import * as PTM from "./JS_CodeGen_TestFiles/TS_UnionType"; // PTM = "Published Types and Methods", but this file can also include app-state and app-event handlers
 import Ambrosia = require("ambrosia-node"); 
 import Utils = Ambrosia.Utils;
 import IC = Ambrosia.IC;
@@ -9,7 +9,7 @@ import Messages = Ambrosia.Messages;
 import Meta = Ambrosia.Meta;
 import Streams = Ambrosia.Streams;
 
-// TODO: It's recommended that you move this namespace to your input file (./JS_CodeGen_TestFiles/TS_Types.ts) then re-run code-gen
+// TODO: It's recommended that you move this namespace to your input file (./JS_CodeGen_TestFiles/TS_UnionType.ts) then re-run code-gen
 export namespace State
 {
     export class AppState extends Ambrosia.AmbrosiaAppState
@@ -130,58 +130,7 @@ function dispatcher(message: Messages.DispatchedMessage): void
                     
                             switch (methodName)
                             {
-                                case "BasicTypes":
-                                    {
-                                        const isFalse: boolean = IC.getPostMethodArg(rpc, "isFalse");
-                                        const height: number = IC.getPostMethodArg(rpc, "height");
-                                        const mystring: string = IC.getPostMethodArg(rpc, "mystring?");
-                                        const mystring2: string = IC.getPostMethodArg(rpc, "mystring2?");
-                                        const my_array: number[] = IC.getPostMethodArg(rpc, "my_array?");
-                                        const notSure: any = IC.getPostMethodArg(rpc, "notSure?");
-                                        IC.postResult<void>(rpc, PTM.Test.BasicTypes(isFalse, height, mystring, mystring2, my_array, notSure));
-                                    }
-                                    break;
-                                
-                                case "getMedia":
-                                    {
-                                        const mediaName: string = IC.getPostMethodArg(rpc, "mediaName");
-                                        IC.postResult<PTM.Test.PrintMedia>(rpc, PTM.Test.getMedia(mediaName));
-                                    }
-                                    break;
-                                
-                                case "warnUser":
-                                    IC.postResult<void>(rpc, PTM.Test.warnUser());
-                                    break;
-                                
-                                case "makeName":
-                                    {
-                                        const firstName: string = IC.getPostMethodArg(rpc, "firstName?");
-                                        const lastName: string = IC.getPostMethodArg(rpc, "lastName?");
-                                        IC.postResult<PTM.Test.Names>(rpc, PTM.Test.makeName(firstName, lastName));
-                                    }
-                                    break;
-                                
-                                case "return_number":
-                                    {
-                                        const strvalue: string = IC.getPostMethodArg(rpc, "strvalue");
-                                        IC.postResult<number>(rpc, PTM.Test.return_number(strvalue));
-                                    }
-                                    break;
-                                
-                                case "returnstring":
-                                    {
-                                        const numvalue: number = IC.getPostMethodArg(rpc, "numvalue");
-                                        IC.postResult<string>(rpc, PTM.Test.returnstring(numvalue));
-                                    }
-                                    break;
-                                
-                                case "fnWithMissingType":
-                                    {
-                                        const p1: any = IC.getPostMethodArg(rpc, "p1");
-                                        const p2: number = IC.getPostMethodArg(rpc, "p2");
-                                        IC.postResult<void>(rpc, PTM.Test.fnWithMissingType(p1, p2));
-                                    }
-                                    break;
+                                // Code-gen: Post method handlers will go here
                                 
                                 default:
                                     {
@@ -214,76 +163,63 @@ function dispatcher(message: Messages.DispatchedMessage): void
                 switch (appEvent.eventType)
                 {
                     case Messages.AppEventType.ICStarting:
-                        Meta.publishType("PrintMedia", "number");
-                        Meta.publishType("PrintMediaReverse", "number");
-                        Meta.publishType("MyEnumAA", "number");
-                        Meta.publishType("MyEnumBBB", "number");
-                        Meta.publishType("Name", "{ first: string, last: string }");
-                        Meta.publishType("Names", "Name[]");
-                        Meta.publishType("Nested", "{ abc: { a: Uint8Array, b: { c: Names } } }");
-                        Meta.publishType("typeWithMissingType", "{ p1: any, p2: number }");
-                        Meta.publishPostMethod("BasicTypes", 1, ["isFalse: boolean", "height: number", "mystring?: string", "mystring2?: string", "my_array?: number[]", "notSure?: any"], "void");
-                        Meta.publishPostMethod("getMedia", 1, ["mediaName: string"], "PrintMedia");
-                        Meta.publishPostMethod("warnUser", 1, [], "void");
-                        Meta.publishPostMethod("makeName", 1, ["firstName?: string", "lastName?: string"], "Names");
-                        Meta.publishPostMethod("return_number", 1, ["strvalue: string"], "number");
-                        Meta.publishPostMethod("returnstring", 1, ["numvalue: number"], "string");
-                        Meta.publishPostMethod("fnWithMissingType", 1, ["p1: any", "p2: number"], "void");
-                        // TODO: Add an exported [non-async] function 'onICStarting(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        Meta.publishType("MyUnionType", "string | number");
+                        // Code-gen: Published methods will go here
+                        // TODO: Add an exported [non-async] function 'onICStarting(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICStarted:
-                        // TODO: Add an exported [non-async] function 'onICStarted(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICStarted(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICStopped:
-                        // TODO: Add an exported [non-async] function 'onICStopped(exitCode: number): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICStopped(exitCode: number): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICReadyForSelfCallRpc:
-                        // TODO: Add an exported [non-async] function 'onICReadyForSelfCallRpc(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICReadyForSelfCallRpc(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
     
                     case Messages.AppEventType.RecoveryComplete:
-                        // TODO: Add an exported [non-async] function 'onRecoveryComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onRecoveryComplete(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.UpgradeState:
-                        // TODO: Add an exported [non-async] function 'onUpgradeState(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
-                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_Types.ts in order to reference the 'Messages' namespace.
+                        // TODO: Add an exported [non-async] function 'onUpgradeState(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
+                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_UnionType.ts in order to reference the 'Messages' namespace.
                         //       Upgrading is performed by calling _appState.upgrade(), for example:
                         //       _appState = _appState.upgrade<AppStateVNext>(AppStateVNext);
                         break;
 
                     case Messages.AppEventType.UpgradeCode:
-                        // TODO: Add an exported [non-async] function 'onUpgradeCode(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
-                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_Types.ts in order to reference the 'Messages' namespace.
+                        // TODO: Add an exported [non-async] function 'onUpgradeCode(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
+                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_UnionType.ts in order to reference the 'Messages' namespace.
                         //       Upgrading is performed by calling IC.upgrade(), passing the new handlers from the "upgraded" PublisherFramework.g.ts,
                         //       which should be part of your app (alongside your original PublisherFramework.g.ts).
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
-                        // TODO: Add an exported [non-async] function 'onIncomingCheckpointStreamSize(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onIncomingCheckpointStreamSize(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                     
                     case Messages.AppEventType.FirstStart:
-                        // TODO: Add an exported [non-async] function 'onFirstStart(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onFirstStart(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.BecomingPrimary:
-                        // TODO: Add an exported [non-async] function 'onBecomingPrimary(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onBecomingPrimary(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                     
                     case Messages.AppEventType.CheckpointLoaded:
-                        // TODO: Add an exported [non-async] function 'onCheckpointLoaded(checkpointSizeInBytes: number): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onCheckpointLoaded(checkpointSizeInBytes: number): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.CheckpointSaved:
-                        // TODO: Add an exported [non-async] function 'onCheckpointSaved(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onCheckpointSaved(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.UpgradeComplete:
-                        // TODO: Add an exported [non-async] function 'onUpgradeComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onUpgradeComplete(): void' to ./JS_CodeGen_TestFiles/TS_UnionType.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                 }
                 break;
