Updated JS Code Gen cmp files that fixed a spelling mistake. Also made more JS to use default values

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_GeneratedConsumerInterface.g.ts.cmp
@@ -1,5 +1,5 @@
 // Generated consumer-side API for the 'TS_EventHandlers_Generated' Ambrosia Node app/service.
-// Publisher: (Not specified).
+// Publisher: Darren Gehring [darrenge@microsoft.com].
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
