--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
@@ -1,5 +1,5 @@
 // Generated consumer-side API for the 'TS_CustomSerialParamNoRawParam_Generated' Ambrosia Node app/service.
-// Publisher: (Not specified).
+// Publisher: Darren Gehring [darrenge@microsoft.com].
 // Note: This file was generated
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
@@ -63,7 +63,7 @@ export namespace Test
 {
     /**
      * Method to test custom serialized parameters.
-     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher for details of the serialization format.
+     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
     export function takesCustomSerializedParams_Fork(rawParams: Uint8Array): void
     {
@@ -73,7 +73,7 @@ export namespace Test
 
     /**
      * Method to test custom serialized parameters.
-     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher for details of the serialization format.
+     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
     export function takesCustomSerializedParams_Impulse(rawParams: Uint8Array): void
     {
@@ -83,7 +83,7 @@ export namespace Test
 
     /**
      * Method to test custom serialized parameters.
-     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher for details of the serialization format.
+     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
     export function takesCustomSerializedParams_EnqueueFork(rawParams: Uint8Array): void
     {
@@ -93,7 +93,7 @@ export namespace Test
 
     /**
      * Method to test custom serialized parameters.
-     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher for details of the serialization format.
+     * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
     export function takesCustomSerializedParams_EnqueueImpulse(rawParams: Uint8Array): void
     {
